--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,12 +1,12 @@
 # This single codebase performs generating of subject, verb, article, adjective, and noun, plus sentence assembly.
 # True microservices would have separate codebases, but for our purposes a single codebase is fine.
 # Run by opening 6 separate command prompts:
-# java -jar -Dspring.profiles.active=subject lab-4-eureka-client-solution-0.0.1-SNAPSHOT.jar
-# java -jar -Dspring.profiles.active=verb lab-4-eureka-client-solution-0.0.1-SNAPSHOT.jar
-# java -jar -Dspring.profiles.active=article lab-4-eureka-client-solution-0.0.1-SNAPSHOT.jar
-# java -jar -Dspring.profiles.active=adjective lab-4-eureka-client-solution-0.0.1-SNAPSHOT.jar
-# java -jar -Dspring.profiles.active=noun lab-4-eureka-client-solution-0.0.1-SNAPSHOT.jar
-# java -jar -Dspring.profiles.active=sentence lab-4-eureka-client-solution-0.0.1-SNAPSHOT.jar
+# java -jar -Dspring.profiles.active=subject eureka-client-0.0.1-SNAPSHOT.jar
+# java -jar -Dspring.profiles.active=verb eureka-client-0.0.1-SNAPSHOT.jar
+# java -jar -Dspring.profiles.active=article eureka-client-0.0.1-SNAPSHOT.jar
+# java -jar -Dspring.profiles.active=adjective eureka-client-0.0.1-SNAPSHOT.jar
+# java -jar -Dspring.profiles.active=noun eureka-client-0.0.1-SNAPSHOT.jar
+# java -jar -Dspring.profiles.active=sentence eureka-client-0.0.1-SNAPSHOT.jar
 
 ---
 # Items that apply to ALL profiles:
